added a navbar and added search pokemon functionality, need to add functionality to select then style

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,9 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "types": ["unplugin-vue-macros/macros-global" /* ... */]
+    "types": [
+      "unplugin-icons/types/vue",
+      "unplugin-vue-macros/macros-global" /* ... */]
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
   "references": [{ "path": "./tsconfig.node.json" }]
