--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "vue": "^3.3.4"
   },
   "devDependencies": {
+    "@iconify-json/mdi": "^1.1.54",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue-macros/volar": "^0.12.3",
+    "@vue/compiler-sfc": "^3.3.4",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
+    "unplugin-icons": "^0.17.0",
     "unplugin-vue-macros": "^2.4.0",
     "vite": "^4.4.5",
     "vue-tsc": "^1.8.5"
